--- a/turismo/public/css/index.css
+++ b/turismo/public/css/index.css
@@ -87,6 +87,7 @@ header .textos-header{
 
 .imagen-alojamiento{
     width: 48%;
+    border-radius: 10px;
 }
 
 .contenedor_productos .contenedor-texto_alojamiento{
