--- a/turismo/public/css/recor.css
+++ b/turismo/public/css/recor.css
@@ -88,6 +88,7 @@ header .textos-header{
 
 .img-port-recor{
     width: 48%;
+    border-radius: 10px;
 }
 
 .contenedor-recorridos .contenedor-textrecor{
